<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="80dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:contentScrim="?attr/colorPrimary">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/TWO"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
                app:layout_constraintStart_toEndOf="@+id/btn1" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/THREE"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
                app:layout_constraintStart_toEndOf="@+id/btn2" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/FOUR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn1" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/EQUAL"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnDecimal"
                app:layout_constraintStart_toEndOf="@+id/btnDecimal" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ONE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnClear" />

            <EditText
                android:id="@+id/editResult"
                android:layout_width="198dp"
                android:layout_height="59dp"
                android:layout_marginStart="99dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="88dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:text="@string/CLEAR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editResult" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/SEVEN"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn4" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/EIGHT"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn7"
                app:layout_constraintStart_toEndOf="@+id/btn7" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/NINE"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
                app:layout_constraintStart_toEndOf="@+id/btn8" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/DECIMAL"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn0"
                app:layout_constraintStart_toEndOf="@+id/btn0" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/FIVE"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn4"
                app:layout_constraintStart_toEndOf="@+id/btn4" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/SIX"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
                app:layout_constraintStart_toEndOf="@+id/btn5" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ZERO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn7" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/D"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btn3" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/M"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btn6" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/S"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btn9" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/A"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnCalculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnCalculate" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>